# kubelias

./: Cargo.toml  README.md  aliases.toml  current_pod.toml
src/: alias.rs  get_pod.rs  main.rs  reader.rs  writer.rs
src/custom_structs/: mod.rs
