[package]
name = "kubelias"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
crossterm = "0.16.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "1"
confy = "0.4.0"
serde_derive = "1.0.32"
toml = "0.5"